Update meta tags

--- a/templates/default.html
+++ b/templates/default.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Leo Orpilla III's personal website">
+        <meta name="author" content="Leo Orpilla III">
+        <meta name="description" content="The personal website of Leo Orpilla III">
         <title>Leo Orpilla III</title>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/syntax.css">
