--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,2 +1,2 @@
-Here you can find all my previous posts:
-$partial("templates/post-list.html")$
+<h1>Posts</h1>
+$partial(templates/post-list.html)$
