fix broken links

--- a/templates/default.html
+++ b/templates/default.html
@@ -43,7 +43,7 @@
                     <a class="footer-icon" href="https://github.com/ldgrp">
                         <i class="icon-github"></i>
                     </a>
-                    <a class="footer-icon" href="https://www.linkedin.com/in/leoorpilla3">
+                    <a class="footer-icon" href="https://www.linkedin.com/in/ldgrp">
                         <i class="icon-linkedin-in"></i>
                     </a>
                 </div>
