--- a/templates/default.html
+++ b/templates/default.html
@@ -18,7 +18,7 @@
             gtag('config', 'UA-172164803-1');
         </script>
     </head>
-    <body class="flex flex-col min-h-screen max-w-4xl mx-auto text-gray-900 font-sans bg-gray-200">
+    <body class="flex flex-col min-h-screen max-w-4xl mx-auto text-body font-sans bg-primary">
             <header class="flex flex-wrap flex-nowrap-ns p-4 md:px-5 items-center font-serif">
                 <div class="w-full flex justify-center">
                     <a class="text-5xl font-bold link text-gray-800 no-underline" href="/">
@@ -35,7 +35,7 @@
                 $body$
             </main>
 
-            <footer class="bg-gray-300 p-4 h-64">
+            <footer class="bg-secondary p-4 h-64">
                 <div class="p-4 flex justify-center">
                     <a class="footer-icon" href="mailto:leoorpilla3@gmail.com">
                         <i class="icon-envelope"></i>
