--- a/css/syntax.css
+++ b/css/syntax.css
@@ -27,10 +27,11 @@ pre.numberSource code > span > a:first-child::before
   }
 pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
 div.sourceCode
-  {  background-color: #f8f8f8; }
+  {  background-color: #f8f8f8; padding: 0.5em; border-radius:0.5em; }
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
+p > code { background-color: #f0f0f0; padding: 0.125em 0; }
 code span.al { color: #ef2929; } /* Alert */
 code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
 code span.at { color: #c4a000; } /* Attribute */
