--- a/templates/default.html
+++ b/templates/default.html
@@ -5,8 +5,9 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Leo Orpilla III">
-        <meta name="description" content="The personal website of Leo Orpilla III">
-        <title>Leo Orpilla III</title>
+        $if(description)$<meta name="description" content="$description$">$endif$
+        <title>$title$ </title>
+        $if(keywords)$<meta name="keywords" content="$keywords$">$endif$
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/syntax.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,13 +39,19 @@
             <footer class="bg-secondary p-4 h-64">
                 <div class="p-4 flex justify-center">
                     <a class="footer-icon" href="mailto:leoorpilla3@gmail.com">
-                        <i class="icon-envelope"></i>
+                        <i class="icon-mail"></i>
+                    </a>
+                    <a class="footer-icon" href="https://twitter.com/_ldgrp">
+                        <i class="icon-twitter"></i>
                     </a>
                     <a class="footer-icon" href="https://github.com/ldgrp">
                         <i class="icon-github"></i>
                     </a>
                     <a class="footer-icon" href="https://www.linkedin.com/in/ldgrp">
-                        <i class="icon-linkedin-in"></i>
+                        <i class="icon-linkedin2"></i>
+                    </a>
+                    <a class="footer-icon" href="https://keybase.io/ldgrp">
+                        <i class="icon-keybase"></i>
                     </a>
                 </div>
                 <div class="text-center">
