--- a/templates/default.html
+++ b/templates/default.html
@@ -38,7 +38,7 @@
 
             <footer class="bg-secondary p-4 h-64">
                 <div class="p-4 flex justify-center">
-                    <a class="footer-icon" href="mailto:leoorpilla3@gmail.com">
+                    <a class="footer-icon" href="mailto:dev@ldgrp.me">
                         <i class="icon-mail"></i>
                     </a>
                     <a class="footer-icon" href="https://twitter.com/_ldgrp">
