--- a/templates/default.html
+++ b/templates/default.html
@@ -5,7 +5,10 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Leo Orpilla III">
-        $if(description)$<meta name="description" content="$description$">$endif$
+        $if(description)$<meta name="description" content="$description$"/>$endif$
+        $if(description)$<meta property="og:description" content="$description$"/>$endif$
+        <meta property="og:type" content="article" />
+        <meta name="og:title" content="$title$">
         <title>$title$ </title>
         $if(keywords)$<meta name="keywords" content="$keywords$">$endif$
         <link rel="stylesheet" href="/css/style.css">
