Update landing page

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,6 +1,6 @@
-<ul class="list-none m-0">
+<ul class="list-none m-0 space-y-2">
     $for(posts)$
-        <li class="mt-8 mb-4">
+        <li>
             <div class="font-mono w-full md:w-1/2 justify-end">$date$</div>
             <a class="no-underline text-xl w-full md:w-1/2" href="$url$">$title$</a> 
         </li>
