--- a/templates/default.html
+++ b/templates/default.html
@@ -1,74 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Leo Orpilla III">
-        $if(description)$<meta name="description" content="$description$"/>$endif$
-        $if(description)$<meta property="og:description" content="$description$"/>$endif$
-        <meta property="og:type" content="article" />
-        <meta name="og:title" content="$title$">
-        <title>$title$ </title>
-        $if(keywords)$<meta name="keywords" content="$keywords$">$endif$
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/syntax.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <link rel="manifest" href="/images/site.webmanifest">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172164803-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-172164803-1');
-        </script>
-    </head>
-    <body class="flex flex-col min-h-screen max-w-4xl mx-auto text-body font-sans bg-primary">
-            <header class="flex flex-wrap flex-nowrap-ns p-4 md:px-5 items-center font-serif">
-                <div class="w-full flex justify-center">
-                    <a class="text-5xl font-bold link text-gray-800 no-underline" href="/">
-                        <span>Leo Orpilla III</span>
-                    </a>
-                </div>
-                <nav class="w-full flex justify-center">
-                    <a class="menu-link" href="/">Home</a>
-                    <a class="menu-link" href="/archive.html">Posts</a>
-                </nav>
-            </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Leo Orpilla III" />
+    $if(description)$
+    <meta name="description" content="$description$" />
+    $endif$ $if(description)$
+    <meta property="og:description" content="$description$" />
+    $endif$
+    <meta property="og:type" content="article" />
+    <meta name="og:title" content="$title$" />
+    <title>$title$</title>
+    $if(keywords)$
+    <meta name="keywords" content="$keywords$" />
+    $endif$
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/syntax.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/images/site.webmanifest" />
+    <!-- Dark mode -->
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (
+        localStorage.getItem("color-theme") === "dark" ||
+        (!("color-theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-172164803-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-172164803-1");
+    </script>
+  </head>
+  <body
+    class="flex flex-col min-h-screen p-2 sm:p-4 max-w-4xl mx-auto text-gray-800 bg-white dark:bg-slate-900 dark:text-gray-200 duration-100"
+  >
+    $partial("templates/header.html")$
 
-            <main class="flex-grow px-3 md:px-8 py-10 bg-white" role="main">
-                $body$
-            </main>
-
-            <footer class="bg-secondary p-4 h-64">
-                <div class="p-4 flex justify-center">
-                    <a class="footer-icon" href="mailto:dev@ldgrp.me">
-                        <i class="icon-mail"></i>
-                    </a>
-                    <a class="footer-icon" href="https://twitter.com/_ldgrp">
-                        <i class="icon-twitter"></i>
-                    </a>
-                    <a class="footer-icon" href="https://github.com/ldgrp">
-                        <i class="icon-github"></i>
-                    </a>
-                    <a class="footer-icon" href="https://www.linkedin.com/in/ldgrp">
-                        <i class="icon-linkedin2"></i>
-                    </a>
-                    <a class="footer-icon" href="https://keybase.io/ldgrp">
-                        <i class="icon-keybase"></i>
-                    </a>
-                </div>
-                <div class="text-center">
-                    <p>
-                    Source on
-                    <a class="text-blue-700" href="https://github.com/ldgrp/ldgrp.github.io">GitHub</a>.
-                    Site proudly generated by
-                    <a class="text-blue-700" href="https://jaspervdj.be/hakyll">Hakyll</a>.
-                    </p>
-                </div>
-            </footer>
-    </body>
+    <main>$body$</main>
+    $partial("templates/footer.html")$
+    <script src="./scripts/darkmode.js"></script>
+  </body>
 </html>
