--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,18 @@
 <footer class="flex flex-col py-8 space-y-4">
     <div class="flex justify-center">
-        <a class="footer-icon" href="mailto:dev@ldgrp.me">
+        <a aria-label="Link to Email" class="footer-icon" href="mailto:dev@ldgrp.me">
             <i class="icon-mail"></i>
         </a>
-        <a class="footer-icon" href="https://twitter.com/_ldgrp">
+        <a aria-label="Link to Twitter" class="footer-icon" href="https://twitter.com/_ldgrp">
             <i class="icon-twitter"></i>
         </a>
-        <a class="footer-icon" href="https://github.com/ldgrp">
+        <a aria-label="Link to GitHub" class="footer-icon" href="https://github.com/ldgrp">
             <i class="icon-github"></i>
         </a>
-        <a class="footer-icon" href="https://www.linkedin.com/in/ldgrp">
+        <a aria-label="Link to LinkedIn" class="footer-icon" href="https://www.linkedin.com/in/ldgrp">
             <i class="icon-linkedin2"></i>
         </a>
-        <a class="footer-icon" href="https://keybase.io/ldgrp">
+        <a aria-label="Link to Keybase" class="footer-icon" href="https://keybase.io/ldgrp">
             <i class="icon-keybase"></i>
         </a>
     </div>
