Update content and fix dark mode

--- a/templates/default.html
+++ b/templates/default.html
@@ -64,12 +64,12 @@
     </script>
   </head>
   <body
-    class="flex flex-col min-h-screen p-2 sm:p-4 max-w-4xl mx-auto text-gray-800 bg-white dark:bg-slate-900 dark:text-gray-200 duration-100"
+    class="flex flex-col min-h-screen p-4 sm:p-4 max-w-4xl mx-auto text-gray-800 bg-white dark:bg-slate-900 dark:text-gray-200 duration-100"
   >
     $partial("templates/header.html")$
 
     <main>$body$</main>
     $partial("templates/footer.html")$
-    <script src="./scripts/darkmode.js"></script>
+    <script src="/scripts/darkmode.js"></script>
   </body>
 </html>
