--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <article>
     <section class="header">
-        <h1 class="text-4xl font-semibold">$title$</h1>
-        <span class="text-gray-700">
+        <h1>$title$</h1>
+        <span class="text-gray-700 dark:text-gray-300">
         $if(last-edited)$
         Last modified $last-edited$
         $else$
@@ -9,8 +9,8 @@
         $endif$
         </span>
     </section>
-    <hr class="border-black border-opacity-25 my-4"/>
-    <section class="">
+    <hr>
+    <section>
         $body$
     </section>
 </article>
