--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,2 +1,4 @@
-<h1>Posts</h1>
+<h1 class="text-3xl my-4 tracking-tight font-bold dark:text-gray-50">Posts</h1>
 $partial("templates/post-list.html")$
+<h1 class="text-3xl my-4 tracking-tight font-bold dark:text-gray-50">Ideas</h1>
+$partial("templates/ideas-list.html")$
