--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="flex flex-col py-8 space-y-4">
+<footer class="flex flex-col mt-12 mb-8 space-y-4">
     <div class="flex justify-center">
         <a aria-label="Link to Email" class="footer-icon" href="mailto:dev@ldgrp.me">
             <i class="icon-mail"></i>
