Add How Big Is My Tax Cut link

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,4 +1,8 @@
 <ul class="list-none m-0 space-y-2">
+    <li>
+        <div class="font-mono w-full md:w-1/2 justify-end">11 Mar 2023</div>
+        <a class="no-underline text-xl w-full md:w-1/2" href="https://observablehq.com/@ldgrp/how-big-is-my-tax-cut">How big is my tax cut?</a> 
+    </li>
     $for(posts)$
         <li>
             <div class="font-mono w-full md:w-1/2 justify-end">$date$</div>
