--- a/templates/default.html
+++ b/templates/default.html
@@ -63,9 +63,7 @@
       gtag("config", "UA-172164803-1");
     </script>
   </head>
-  <body
-    class="flex flex-col min-h-screen p-4 sm:p-4 max-w-4xl mx-auto text-gray-800 bg-white dark:bg-slate-900 dark:text-gray-200 duration-100"
-  >
+  <body>
     $partial("templates/header.html")$
 
     <main>$body$</main>
