--- a/templates/ideas.html
+++ b/templates/ideas.html
@@ -1,9 +1,16 @@
+<article>
 <h1 class="text-3xl my-4 tracking-tight font-bold dark:text-gray-50">$title$</h1>
 
-<p class ="my-4">
-A collection of weird half-baked ideas I want to eventually build. 
-These have either been provoked by some annoying problem, or a simple showerthought.
-None of them are particularly groundbreaking, and probably already exist in some form or fashion.
+<p>
+A collection of half-baked ideas I want to build. 
+There is no guarantee that I will ever build any of these, but I want to keep track of them somewhere.
+Their usefulness may be questionable, but I think they are interesting enough to document.
+None of them are particularly groundbreaking and may probably already exist in some form or fashion.
+</p>
+
+<p>
+Feel free to reach out to me if you have any questions or comments.
 </p>
 
 $partial("templates/ideas-list.html")$
+</article>
