--- a/templates/ideas-list.html
+++ b/templates/ideas-list.html
@@ -3,7 +3,9 @@
         <li>
             <div class="metadata">
                 <span class="date">$date$</span>
+                $if(status)$
                 <span class="status status-$status$">$status$</span>
+                $endif$
             </div>
             <a class="title" href="$url$">$title$</a>
         </li>
