--- a/css/syntax.css
+++ b/css/syntax.css
@@ -27,11 +27,12 @@ pre.numberSource code > span > a:first-child::before
   }
 pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
 div.sourceCode
-  {  background-color: #fafafa; padding: 0.5em; border: #aaa 1px solid; font-size: 0.9em; }
+  {  background-color: #fffdf5; padding: 0.5em; border: #aaa 1px solid; font-size: 0.9em; }
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-p > code { background-color: #fafafa; color: #000; padding: 0.125em 0; }
+p > code { background-color: #fffdf5; border: 1px solid #aaa; color: #000; padding: 0.125em 0.125em; font-size: 0.9em }
+.dark p > code { background-color: #151515; border-color: #444; color: #fff;}
 code span.al { color: #ef2929; } /* Alert */
 code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
 code span.at { color: #c4a000; } /* Attribute */
