--- a/templates/ideas.html
+++ b/templates/ideas.html
@@ -2,15 +2,17 @@
 <h1 class="text-3xl my-4 tracking-tight font-bold dark:text-gray-50">$title$</h1>
 
 <p>
-A collection of half-baked ideas I want to build. 
+A collection of mostly half-baked ideas. 
 There is no guarantee that I will ever build any of these, but I want to keep track of them somewhere.
-Their usefulness may be questionable, but I think they are interesting enough to document.
+
 None of them are particularly groundbreaking and may probably already exist in some form or fashion.
 </p>
 
 <p>
-Feel free to reach out to me if you have any questions or comments.
+Feel free to <a href="mailto:ideas@ldgrp.me">reach out</a> if you have any questions or comments.
 </p>
+
+<hr/>
 
 $partial("templates/ideas-list.html")$
 </article>
