--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,7 +2,7 @@ pre > code.sourceCode { white-space: pre; position: relative; }
 pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 code.sourceCode > span { color: #000; text-decoration: inherit; }
-div.sourceCode { margin: 1em 0; }
+div.sourceCode { margin: 2em 0; }
 pre.sourceCode { margin: 0.5em; }
 @media screen {
 div.sourceCode { overflow: auto; }
@@ -31,8 +31,8 @@ div.sourceCode
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-p > code { background-color: #fffdf5; border: 1px solid #aaa; color: #000; padding: 0.125em 0.125em; font-size: 0.9em }
-.dark p > code { background-color: #151515; border-color: #444; color: #fff;}
+p > code, li > code { background-color: #fffdf5; border: 1px solid #aaa; color: #000; padding: 0.125em 0.125em; font-size: 0.9em }
+.dark p > code, .dark li > code { background-color: #151515; border-color: #444; color: #fff;}
 code span.al { color: #ef2929; } /* Alert */
 code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
 code span.at { color: #c4a000; } /* Attribute */
