--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,6 +1,6 @@
 <ul class="entry-list">
     $for(posts)$
-        <li>
+        <li class="group">
             <div class="date">$date$</div>
             <a class="title" href="$url$">$title$</a> 
         </li>
