--- a/templates/ideas-list.html
+++ b/templates/ideas-list.html
@@ -12,11 +12,8 @@
             </div>
             <div class="metadata">
                 <span class="date">$date$</span>
-                $if(status)$
-                <span class="status status-$status$">$status$</span>
-                $endif$
             </div>
-            <a class="title" href="$url$">$title$</a>
+            <a class="title group-hover:decoration-solid" href="$url$">$title$</a>
         </li>
     $endfor$
 </ul>
